# Zansoc-v5

./: .gitignore  conda_env.yaml  fix_git_push.sh  requirements.txt  steps.txt
cli/: .gitignore  LICENSE  Makefile  README.md  build_package.sh  debug_ray_status.py  demo_cli.py  demo_environment.py  demo_platform.py  demo_ray.py  demo_tailscale.py  download.html  install.sh  manual_onboarding.sh  pyproject.toml  requirements.txt  run_cli.sh  setup.py
cli/tests/: __init__.py  test_cli_interface.py  test_config_manager.py  test_database.py  test_environment_manager.py  test_models.py  test_platform_utils.py  test_provider_manager.py  test_ray_manager.py  test_tailscale_manager.py
cli/zansoc_cli/: __init__.py  cli_interface.py  config_manager.py  database.py  debug_utils.py  environment_manager.py  main.py  models.py  onboarding_orchestrator.py  platform_utils.py  provider_manager.py  ray_manager.py  seamless_cli.py  simple_onboarding.py  tailscale_manager.py
cli/zansoc_cli/config/: default.yaml
cli/zansoc_cli/scripts/: __init__.py  init_db.py
cli/zansoc_cli/utils/: __init__.py  logger.py
config/: master.yaml
data/01K51Q4WSB1BFACSXTKMZ3FQSK/: index  meta.json
data/01K53YTV3H41T6S9JPV1YM4NWJ/: index  meta.json
data/01K55WT38KNKPSC8CJ4WPW21NN/: index  meta.json
data/01K57T40303948XSQ3J8601YJ1/: index  meta.json
data/01K59QJ3P7R487Q274QDXDEMX5/: index  meta.json
data/01K5BNJYT3ESJSQEJDCBEVTGFM/: index  meta.json
data/01K5C395B9MVHVZJS371MK66B6/: index  meta.json
data/01K5CA376CNJAAEPBJB6NHS1DZ/: index  meta.json
data/01K5CA37FS7J7H3XZFTSEZTD08/: index  meta.json
data/01K5CGZ8XQN4VCNQ1JE76WDGX2/: index  meta.json
data/01K5CQMSEHGDNVJBK4TSE10YQZ/: index  meta.json
data/01K5DKY7GA3W2XXREEBM5SN3K3/: index  meta.json
data/01K5E8N09MGRC2FP2JVEYA7V0H/: index  meta.json
data/01K5ENKP7GPX5FDNBABPFH214E/: index  meta.json
data/01K5EWJ54ATA6PF24Z8VAJFGVX/: index  meta.json
data/01K5EWJ5CTZYWHCCS0FYXF8ACM/: index  meta.json
data/chunks_head/: 000051  000052  000062
data/wal/: 00000050  00000051  00000052  00000053  00000060  00000061  00000062  00000063
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
src/master/: app.py  dashboard.py  sample_workload.py  (+8 more)
(+32 files in other folders)
